2007-05-12  Neil Shi  <zeegeek@gmail.com>

	* gui.py (gui.__auth_toggled): Disable username and password entry
	when authentication is unselected.

	* config.py (config.write): Sets config file permissions to 0600.

	* pymailheaders.py (main): Correctly handles unset variables.

	* feedprl.py (feed.get_mail.a): Displays sender's name only if there
	is one.  Otherwise display the email address.

2007-05-11  Neil Shi  <zeegeek@gmail.com>

	* imapprl.py (imap.get_mail): Displays sender's name only if there
	is one.  Otherwise display the email address.

	* popprl.py (pop.get_mail): Displays sender's name only if there
	is one.  Otherwise display the email address.

2007-04-24  Neil Shi  <zeegeek@gmail.com>

	* gui.py (gui.__position_changed): Now it remembers position on
	quit correctly.

2007-04-20  Neil Shi  <zeegeek@gmail.com>

	* pymailheaders.py (main): Now it fetches all messages and pass
	them to the GUI.

	* config.py (config): Added settings for GTK+.

	* gui.py (gui): Changed GUI to GTK+.
	(gui): Added settings and about dialog.

2007-04-12  Neil Shi  <zeegeek@gmail.com>

	* config.py (config): Added configuration file support.

2007-03-31  Neil Shi  <zeegeek@gmail.com>

	* imapprl.py (imap.get_mail): Fixed the bug of highlighting wrong
	messages if the new messages are not at the top.  Use a new data
	structure to store message entries.

2007-03-14  Neil Shi  <zeegeek@gmail.com>

	* popprl.py: Added POP3 support.  But it's not storing new
	messages' status correctly after rechecking.
	* imapprl.py (imap.check): Moved this function to private.
	* feedprl.py (feed.check): Deleted this function.

2007-02-19  Neil Shi  <zeegeek@gmail.com>

	* imapprl.py (imap.get_mail): fixed a bug which was introduced in
	previous release.  reverse() works in-place and always returns None.

2007-02-18  Neil Shi  <zeegeek@gmail.com>

	* feedprl.py (feed.get_mail): added XML feed support, including
	Gmail support.
